--- a/java/设计模式六大原则.md
+++ b/java/设计模式六大原则.md
@@ -2,7 +2,7 @@
 
 #### [设计模式六大原则（1）：单一职责原则](https://blog.csdn.net/zhengzhb/article/details/7278174)
 
-#### [设计模式六大原则（2）：里氏替换原则](https://blog.csdn.net/zhengzhb/article/details/7281833#comments)
+#### [设计模式六大原则（2）：里氏替换原则](https://blog.csdn.net/zhengzhb/article/details/7281833)
 
 #### [设计模式六大原则（3）：依赖倒置原则](https://blog.csdn.net/zhengzhb/article/details/7289269)
 
@@ -11,4 +11,3 @@
 #### [设计模式六大原则（5）：迪米特法则](https://blog.csdn.net/zhengzhb/article/details/7296930)
 
 #### [设计模式六大原则（6）：开闭原则](https://blog.csdn.net/zhengzhb/article/details/7296944)
-
